# tariffscraper

./: pyproject.toml
tariffscraper/banks/kcb/: kcb_parser.py
tariffscraper/cli/: scraper.py
